# lako

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile-local  README.md  docker-compose.yml  docker-entrypoint.sh
alon/: Cargo.toml
alon/src/: listener.rs
migrations/2020-03-19-162949_create_emails/: down.sql  up.sql
migrations/2020-03-20-155824_create_users/: up.sql
migrations/2020-03-20-162232_create_emails/: down.sql  up.sql
migrations/2021-05-26-123550_create_clients/: up.sql
migrations/2021-05-26-123550_crete_clients/: up.sql
migrations/2021-07-31-113930_create_companies/: down.sql  up.sql
migrations/2021-08-01-150617_create_invoices/: up.sql
migrations/2021-08-03-182436_create_invoice_items/: down.sql  up.sql
src/: auth.rs  config.rs  db.rs  email.rs  error.rs  http.rs  lib.rs  main.rs  mongodb.rs  schema.rs  sql_types.rs
src/models/: client.rs  company.rs  email.rs  invoice.rs  mod.rs  user.rs
src/routes/: auth.rs  clients.rs  companies.rs  invoices.rs  mod.rs  paths.rs  utils.rs
src/sqlx/: invoice.rs  mod.rs
