[package]
name = "lako"
version = "0.1.0"
authors = ["Syaiful Bahri <syai.bahri6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "serde_json", "chrono", "r2d2"] }
futures = "0.1.27"
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.12"
mime = "0.3"
log = "0.4.8"
tokio = "0.1"
pretty_env_logger = "0.4"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
