[package]
name = "lako"
version = "0.1.0"
authors = ["Syaiful Bahri <syai.bahri6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.9.0"
clap = "2.33.0"
chrono = { version = "0.4.11", features = ["serde"] }
rust_decimal = { version = "1.15", features = ["db-postgres", "db-diesel-postgres"] }
rust_decimal_macros = "1.15"
diesel = { version = "1.4.5", features = ["postgres", "serde_json", "chrono", "r2d2", "uuidv07"] }
failure = "0.1.8"
futures = "0.3.1"
gotham = "0.6.0"
gotham_derive = "0.6.0"
gotham_middleware_diesel = "0.3.1"
gotham_middleware_jwt = "0.6.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
jsonwebtoken = "7.2.0"
mime = "0.3.15"
native-tls = "0.2.8"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4.8"
thiserror = "^1.0"
tokio = { version = "1.0.0", features = ["full"] }
pretty_env_logger = "0.4"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
validator = "0.10"
validator_derive = "0.10"
